# enm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  enm.cabal  package.json
app/: Main.hs
app/Commands/: Check.hs  Clean.hs  Explore.hs  Help.hs  Init.hs  Ls.hs  Ping.hs  Version.hs
app/Settings/: Config.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
