cabal-version:      2.4
name:               enm
version:            0.1.0.0
author:             rendick
maintainer:         rendick123@proton.me

extra-source-files: CHANGELOG.md

executable enm
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, directory, filepath
    hs-source-dirs:   app
    other-modules:    Commands.Help
                      Commands.Init
                      Commands.Version
					  Commands.Ls
    default-language: Haskell2010
