cabal-version:      2.4
name:               enm
version:            0.1.0.0
author:             rendick
maintainer:         rendick123@proton.me

extra-source-files: CHANGELOG.md

executable enm
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
					, directory
					, filepath
					, time
					, http-conduit >= 2.3.8.3
					, bytestring >= 0.12.1.0
					, time
    hs-source-dirs:   app
    other-modules:    Commands.Help
                      Commands.Init
                      Commands.Version
					  Commands.Ls
					  Commands.Ping
    default-language: Haskell2010
